--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,10 @@ name: Stargate
 main: net.TheDgtl.Stargate.Stargate
 version: @version@
 description: Stargate mod for Bukkit
-authors: [Drakia, PseudoKnight, Frostalf, InteriorCamping, LittleBigBug, TheViperShow, Thorinwasher]
+authors: [Drakia, PseudoKnight, Thorin]
 website: https://discord.gg/mTaHuK6BVa
-api-version: @spigot-version@
+api-version: 1.15
+softdepend: [Vault]
 commands:
   sg:
     description: Used to reload the plugin. Console use only.
