--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,5 +1,7 @@
 # Stargate Hikari Datasource Properties for advanced database Configuration
 # For more information go to https://github.com/brettwooldridge/HikariCP#gear-configuration-knobs-baby
+
+datasource.jdbcUrl=
 dataSource.user=default
 dataSource.password=pas
 dataSource.cachePrepStmts=true
