Starts work on the new database structure
Updates the "create table", add portal and get portals queries, though they are still unfinished
Adds some unfinished tests for testing database queries
Adds MockBukkit as a dependency
Adds a new StargateLogger class to log without having Stargate instantiated

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,18 @@
             <version>5.1.41</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.seeseemelk</groupId>
+            <artifactId>MockBukkit-v1.16</artifactId>
+            <version>1.5.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Stargate-${project.version}</finalName>
