--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
