Some tweaks to the plugin experience
- Now loads chunk for the destination
- Added a new setting "DISABLE_CUSTOM_COLORED_NAMES"

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -190,6 +190,8 @@ rememberLastDestination: false
 # When exiting a gate, players retain their original movement velocity, multiplied by this value.
 gateExitSpeedMultiplier: 1
 
+# TODO: write a desription
+disableCustomColoredNames: true
 
 # +----------------------------------------------------------------------------------------------+ #
 # |                                           Technical                                          | #
