Fixes a bunch of warnings and typos

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -190,7 +190,7 @@ rememberLastDestination: false
 # When exiting a gate, players retain their original movement velocity, multiplied by this value.
 gateExitSpeedMultiplier: 1
 
-# TODO: write a desription
+# TODO: write a description
 disableCustomColoredNames: true
 
 # +----------------------------------------------------------------------------------------------+ #
