Fixed some bugs. Also noticed that it get's hard to make proper unit tests, if it's covering a large domain
A thought that might work: Create a new kind of portal, something like "placeholder portal" this portal only store valuable properties of a portal, and can be used instead of a normal portal for saving

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
             <groupId>com.github.seeseemelk</groupId>
             <artifactId>MockBukkit-v1.16</artifactId>
             <version>1.5.2</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
